# advent-of-code

./: .gitignore  README.md  setup_day.sh  tickets.md
01/: day1.c  day1_2.c
02/: day2.kt  day2_2.kt
03/: day3.c
04/: Cargo.toml
04/src/: main.rs  types.rs
05/: day5.c  day5_2.c
06/: main.go
07/: main.kt
08/: main.go
09/: day9.py
10/: Cargo.toml
10/src/: main.rs
11/: day11.c  day11_2.c
12/: 12.py  d12.c  puzzle
13/: Cart.kt  main.kt  main_2.kt
14/: main.go  puzzle
15/: input
16/: Cargo.toml
16/src/: functions.rs  main.rs
2015/: day1.py  day2.py
2017/: README.md  day08.nim  day19.nim  day20.nim
2018/: README.md
2018/02/: day2_2.kt
2018/03/: day3.c  day3_2.c  day3_big.c
2018/04/: Cargo.toml
2018/05/: day5.c
2018/07/: main.kt  main_2.kt
2018/11/: day11.c
2019/: setup_day.sh
2020/: Cargo.toml  rustfmt.toml  setup_day.sh
2020/01/: Cargo.toml  d1.py
2020/01/src/: main.rs
2020/02/: Cargo.toml
2020/02/src/: main.rs
2020/03/: Cargo.toml
2020/03/src/: main.rs
2020/04/: Cargo.toml
2020/04/src/: main.rs
2020/05/: Cargo.toml
2020/05/src/: main.rs
2020/06/: Cargo.toml
2020/06/src/: main.rs
2020/07/: Cargo.toml
2020/07/src/: main.rs
2020/08/: Cargo.toml
2020/08/src/: main.rs
2020/src/: common.rs  grid.rs  lib.rs  main.rs  teststuff.rs
2020/src/grid/: cell.rs  direction.rs  position.rs
2021/: Cargo.toml  rustfmt.toml  setup_day.sh
2022/: Cargo.toml  day1_dc.sh  setup_day.sh
2023/: Cargo.toml  setup_day.sh
2024/: Cargo.toml  rustfmt.toml  setup_day.sh
2025/: Cargo.toml  setup_day.sh
(+119 files in other folders)
