[package]
name = "aoc2020"
version = "0.1.0"
authors = ["kageru <kageru@encode.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
lazy_static = "1.4.0"
regex = "1.4.2"
text_io = "0.1.8"
# for the day 4 meme solution
serde = { version = "1.0.117", features = ["derive"] }
serde_yaml = "0.8.14"
