[package]
name = "day04"
version = "0.1.0"
authors = ["kageru <kageru@encode.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
regex = "1.4.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_yaml = "0.8.14"
